Page speed optimisation

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -262,9 +262,9 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .btn-secondary{background-color:#2B9884;border:2px solid #fff;color:#fff;padding:10px 20px;font-weight:600;font-size:13px}
 .btn-filter{background-color:#fff;border-color:#ddd;color:#666}
 .splash{background-size:cover;color:#fff;text-align:center;background-repeat:no-repeat;}
-#home-splash{background-image:url(../img/Crowd.jpg);background-position:center;height:100vh}
-#data-splash{background-image:url(../img/Cards/splash1.jpg);height:80vh}
-#about-splash{background-image:url(../img/Cards/splash4.jpg);height:80vh}
+#home-splash{background-image:url(../img/Crowd.png);background-position:center;height:100vh}
+#data-splash{background-image:url(../img/Cards/splash1.jpg);height:75vh}
+#about-splash{background-image:url(../img/Cards/splash4.jpg);height:75vh}
 #project-splash{height:100vh}
 #project-splash h1 strong{font-weight:300}
 #project-splash h1{font-size:3.0em;}
@@ -376,6 +376,7 @@ to{-webkit-transform:rotate(360deg)}
 .navbar .container{width:auto!important}
 .navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:#D00000;background-color:rgba(0,0,0,0,)}
 .navbar.opaque .nav > li.active > a{color:#fff}
+.navbar.opaque .navbar-logo{}
 .navbar .nav > li > a{color:#404040}
 .navbar-fixed-top{padding-top:10px;padding-bottom:10px;background-color:rgba(255,255,255,1);border-bottom:2px solid #eee}
 .navbar-inner{padding-left:15px!important;padding-right:15px!important}
