--- a/templates/projects/task_presenter_editor.html
+++ b/templates/projects/task_presenter_editor.html
@@ -1,6 +1,7 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
+{% set preload_js = "true" %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
