--- a/templates/stats/blglobal.html
+++ b/templates/stats/blglobal.html
@@ -2,6 +2,7 @@
 {% set active_page = "globalstats" %}
 {% set active_project  = "all" %}
 {% import "privacy/locked.html" as privacy %}
+{% set preload_js = "true" %}
 
 {% block content %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
@@ -153,10 +154,8 @@
             {% endif %}
 </div>
 <script src="{{url_for('static', filename='js/vendor/Chart.js-master/Chart.js')}}"></script>
+<script src="{{url_for('static', filename='js/chartconfig.js')}}"></script>
 <script>
-Chart.defaults.global={animation:true,animationSteps:60,animationEasing:"easeOutQuart",showScale:true,scaleOverride:false,scaleSteps:null,scaleStepWidth:null,scaleStartValue:null,scaleLineColor:"rgba(0,0,0,.1)",scaleLineWidth:1,scaleShowLabels:true,scaleLabel:"<%=value%>",scaleIntegersOnly:true,scaleBeginAtZero:false,scaleFontFamily:"'Helvetica Neue', 'Helvetica', 'Arial', sans-serif",scaleFontSize:12,scaleFontStyle:"normal",scaleFontColor:"#666",responsive:true,maintainAspectRatio:true,showTooltips:true,customTooltips:false,tooltipEvents:["mousemove","touchstart","touchmove"],tooltipFillColor:"rgba(0,0,0,0.8)",tooltipFontFamily:"'Helvetica Neue', 'Helvetica', 'Arial', sans-serif",tooltipFontSize:14,tooltipFontStyle:"normal",tooltipFontColor:"#fff",tooltipTitleFontFamily:"'Helvetica Neue', 'Helvetica', 'Arial', sans-serif",tooltipTitleFontSize:14,tooltipTitleFontStyle:"bold",tooltipTitleFontColor:"#fff",tooltipYPadding:6,tooltipXPadding:6,tooltipCaretSize:8,tooltipCornerRadius:6,tooltipXOffset:10,onAnimationProgress:function(){},onAnimationComplete:function(){},segmentShowStroke:true,segmentStrokeColor:"#fff",tooltipTemplate:"<%%><%=label%><%%>",segmentStrokeWidth:2,percentageInnerCutout:50,animateRotate:true,animateScale:false,legendTemplate:'<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++)\u007D%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label)\u007D%><%=segments[i].label%\u007B<%}%></li><%\u007B%></ul>'}
-</script>
-    <script>
     
 $(function(){
     $('#loading-stats').slideUp();
@@ -307,45 +306,16 @@ $(function(){
           
         {% if task_runs_daily %}
             //Tasks completed per day
-            $taskRunDates = {{task_runs_daily|safe}}['days'];
-            $taskDates = {{tasks_completed_daily|safe}}['days'];
+            var tasksCompletedData = {{task_runs_daily|safe}}['days']
             
-            $taskRunCount = {{task_runs_daily|safe}}['tasks'];
-            $taskCount = {{tasks_completed_daily|safe}}['tasks'];
-            
-            var compiledDates = $taskRunDates.concat($taskDates);
-            compiledDates.sort(function(a, b){
-                return new Date(a) - new Date(b);
-            });
-            
-            var sortedDates = [];
-            var sortedDatesFull = [];
-            $.each(compiledDates, function(i, date){
+            var tasksCompletedLabels = [];
+            $.each(tasksCompletedData, function(i, date){
                 var dateObj = new Date(date);
-                if($.inArray(date, sortedDatesFull) === -1) {
-                    sortedDates.push($.datepicker.formatDate('dd M', dateObj));
-                    sortedDatesFull.push(date);
-                }
+                tasksCompletedLabels.push($.datepicker.formatDate('dd M', dateObj));
             });
             
-            var taskRunData = [];
-            var taskData = [];
-            
-            $.each(sortedDatesFull, function(i, date){
-                var dateObj = new Date(date);
-                if($.inArray(date, $taskRunDates)!==-1) {
-                    taskRunData.push($taskRunCount.shift());
-                } else {
-                    taskRunData.push(0);
-                }
-                if($.inArray(date, $taskDates)!==-1) {
-                    taskData.push($taskCount.shift());
-                } else {
-                    taskData.push(0);
-                }
-            });
             var data = {
-                labels: sortedDates,
+                labels: tasksCompletedLabels,
                 datasets: [
                     {
                         label: "contribution",
@@ -355,17 +325,7 @@ $(function(){
                         pointStrokeColor: "#fff",
                         pointHighlightFill: "#fff",
                         pointHighlightStroke: "rgba(151,187,205,1)",
-                        data: taskRunData
-                    },
-                    {
-                        label: "completed task",
-                        fillColor: "rgba(150,150,150,0.2)",
-                        strokeColor: "rgba(150,150,150,1)",
-                        pointColor: "rgba(150,150,150,1)",
-                        pointStrokeColor: "#fff",
-                        pointHighlightFill: "#fff",
-                        pointHighlightStroke: "rgba(150,150,150,1)",
-                        data: taskData
+                        data: {{task_runs_daily|safe}}['tasks']
                     }
                 ]
             };
