--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,4 +1,5 @@
-<div class="navbar navbar-fixed-top navbar-default notransition">
+<div class="navbar navbar-fixed-top navbar-default notransition
+{% if not active_page == 'index' and not has_splash == 'true' %}opaque{% endif %}">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -8,7 +9,12 @@
             </button>
           <var id="logo-black" data-src="{{url_for('static',filename='img/logo-dark-plain.png')}}"></var>
           <var id="logo-white" data-src="{{url_for('static',filename='img/logo-white-plain.png')}}"></var>
-          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo" src="{{url_for('static',filename='img/logo-white-plain.png')}}" alt="{{brand}} logo" /></a>
+          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo"
+          {% if not active_page == 'index' and not has_splash == 'true' %}
+                  src="{{url_for('static',filename='img/logo-dark-plain.png')}}"
+          {% else %}
+                  src="{{url_for('static',filename='img/logo-white-plain.png')}}"
+          {% endif %}" alt="{{brand}} logo" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
