--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% set active_page = "blsearch" %}
 {% from "admin/_helpers.html" import render_local_nav %}
-
+{% set preload_js = "true" %}
 {% block content %}
 {{ render_local_nav(current_user, "catalogue") }}
 <div class="container-padded">
