--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% set active_page = "about" %}
+{% set has_splash = "true" %}
 
 {% block content %}
     {% include ['custom/_about.html', 'home/_about.html'] ignore missing %}
