--- a/templates/projects/importers/gdocs.html
+++ b/templates/projects/importers/gdocs.html
@@ -5,40 +5,37 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-        {{ render_local_nav(current_user, "tasks", project.short_name) }}
-            <div class="container-padded">
-                <div class="container container-padded">
-                    <div class="row">
-                        <div class="col-sm-9 col-sm-offset-3">
-                            {% include "_flash_messages.html" %}
-                            {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
-                            <h1><strong>{{project.name}}</strong>: {{_('Import tasks')}}</h1>
-                            {% if form %}
-                                <hr>
-                                    <div class="row vcenter">  
-                                        <div class="col-xs-10">
-                                        <h3>{{_('From a Google Docs Spreadsheet')}}</h3>
-                                        </div>
-                                      <div class="col-xs-2">
-                                            <a href="https://docs.google.com/spreadsheet/ccc?key=0AsNlt0WgPAHwdHFEN29mZUF0czJWMUhIejF6dWZXdkE&usp=sharing"><i class="fa fa-book"></i> Sample Data</a>
-                                      </div>
-                                    </div>
-                          <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
-                            <fieldset>
-                            {{ form.hidden_tag() }}
-                              {{ render_field(form.googledocs_url, class_="input-block-level form-control", placeholder="The URL of the Google Docs Spreadsheet", required="required", autofocus="autofocus", type="url") }}
-                              <div class="pull-right" role="group">
-                                <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
-                                <input id="submit" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
+    {{ render_local_nav(current_user, "tasks", project.short_name) }}
+    <div class="container-padded">
+        <div class="container container-padded">
+            <div class="row">
+                <div class="col-sm-9 col-sm-offset-3">
+                    {% include "_flash_messages.html" %}
+                    {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
+                    <h1><strong>{{project.name}}</strong>: {{_('Import tasks')}}</h1>
+                    {% if form %}
+                        <hr>
+                            <div class="row vcenter">  
+                                <div class="col-xs-10">
+                                <h3>{{_('From a Google Docs Spreadsheet')}}</h3>
+                                </div>
+                              <div class="col-xs-2">
+                                    <a href="https://docs.google.com/spreadsheet/ccc?key=0AsNlt0WgPAHwdHFEN29mZUF0czJWMUhIejF6dWZXdkE&usp=sharing"><i class="fa fa-book"></i> Sample Data</a>
                               </div>
-                            </fieldset>
-                          </form>
-                          {% endif %}
-                        </div>
-                    </div>
+                            </div>
+                  <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
+                    <fieldset>
+                    {{ form.hidden_tag() }}
+                      {{ render_field(form.googledocs_url, class_="input-block-level form-control", placeholder="The URL of the Google Docs Spreadsheet", required="required", autofocus="autofocus", type="url") }}
+                      <div class="pull-right" role="group">
+                        <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">{{_('Cancel')}}</a>
+                        <input id="import" type="submit" value="{{_('Import')}}" class="btn btn-danger" />
+                      </div>
+                    </fieldset>
+                  </form>
+                  {% endif %}
                 </div>
             </div>
-<script>
-    $("#submit").off('click').on('click', function(){$("#loading").show();});
-</script>
+        </div>
+    </div>
 {% endblock %}
