--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -1,7 +1,7 @@
 {% extends "/base.html" %}
 {% set active_page = "projects" %}
-
 {% import "projects/_helpers.html" as helper %}
+{% set preload_js = "true" %}
 
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
@@ -13,45 +13,45 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-pills">
                     {% for c in categories %}
-                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('project.project_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
-                            {% endfor %}
-                            {% if current_user.is_authenticated() and current_user.admin %}
-                                <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('project.draft')}}"> {{ _('Draft') }}</a></li>
-                            {% endif %}
+                            <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('project.project_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
+                        {% endfor %}
+                        {% if current_user.is_authenticated() and current_user.admin %}
+                            <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('project.draft')}}"> {{ _('Draft') }}</a></li>
+                        {% endif %}
                 </ul>
             </div>
         </div>
     </section>
         
-                <div class="container">
-                    <div class="col-xs-12 padding-top-xs">
-                        {% include "_flash_messages.html" %}
-                        <div id="sorts" class="btn-group pull-right">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">Date</span> <span class="caret"></span></button>
-                            <ul class="dropdown-menu" style="top:35px;">
-                              <li><a href="#" data-sort-value="original-order">date</a></li>
-                              <li><a href="#" data-sort-value="name">name</a></li>
-                              <li><a href="#" data-sort-value="activity">activity</a></li>
-                              <li><a href="#" data-sort-value="progress">progress</a></li>
-                            </ul>
-                        </div>
-                
-                    {% if projects %}
-                        <div class="polaroids projects margin-top-sm">
-                            {% for project in projects %}
-                                {{ helper.show_project(project, active_cat.short_name, current_user, upload_method) }}
-                            {% endfor %}
-                        </div>
-                            {% if pagination.pages > 1 %}
-                            {{ helper.render_pagination(pagination) }}
-                        {% endif %}
-                        {% else %}
-                            <div class="container container-padded">
-                                <h2 class="text-center inset-text-grey">{{_('Sorry, there are no published projects for this category yet')}}</h2>
-                            </div>
-                        {% endif %}
-                    </div>
+    <div class="container">
+        <div class="col-xs-12 padding-top-xs">
+            {% include "_flash_messages.html" %}
+            <div id="sorts" class="btn-group pull-right">
+                <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">Date</span> <span class="caret"></span></button>
+                <ul class="dropdown-menu" style="top:35px;">
+                  <li><a href="#" data-sort-value="original-order">date</a></li>
+                  <li><a href="#" data-sort-value="name">name</a></li>
+                  <li><a href="#" data-sort-value="activity">activity</a></li>
+                  <li><a href="#" data-sort-value="progress">progress</a></li>
+                </ul>
+            </div>
+    
+        {% if projects %}
+            <div class="polaroids projects margin-top-sm">
+                {% for project in projects %}
+                    {{ helper.show_project(project, active_cat.short_name, current_user, upload_method) }}
+                {% endfor %}
+            </div>
+                {% if pagination.pages > 1 %}
+                {{ helper.render_pagination(pagination) }}
+            {% endif %}
+            {% else %}
+                <div class="container container-padded">
+                    <h2 class="text-center inset-text-grey">{{_('Sorry, there are no published projects for this category yet')}}</h2>
                 </div>
+            {% endif %}
+        </div>
+    </div>
             
 </div>
 {{ helper.broken_image() }}
@@ -69,7 +69,6 @@ $( function() {
       progress: '.progress parseInt',
     }
   });
-  console.log($('.projects').isotope());
 
   // bind sort button click
   $('#sorts').on( 'click', 'a', function() {
