--- a/templates/stats/blglobal.html
+++ b/templates/stats/blglobal.html
@@ -332,7 +332,7 @@ $(function(){
             $("#task-date").attr("width", $('#task-date-chart').width());
             $("#task-date").attr("height", 300);
             var ctx = $("#task-date")[0].getContext("2d");
-            var opts = {populateSparseData:true, multiTooltipTemplate: " <%=value%> <%=datasetLabel%><%if(value != 1)\u007B%>s<%}%>"};
+            var opts = {populateSparseData:true, tooltipTemplate: "<%if(label)\u007B%><%=label%> : <%}%><%=value%> <%if(value != 1)\u007B%>contributions<%}else\u007B%>contribution<%}%>"};
             var taskDateChart = new Chart(ctx).Line(data, opts);
             taskDateChart.draw();
         {% else %}
