Remove rouge quotation mark

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -14,7 +14,7 @@
                   src="{{url_for('static',filename='img/logo-dark-plain.png')}}"
           {% else %}
                   src="{{url_for('static',filename='img/logo-white-plain.png')}}"
-          {% endif %}" alt="{{brand}} logo" /></a>
+          {% endif %} alt="{{brand}} logo" /></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
