--- a/templates/projects/update_project.html
+++ b/templates/projects/update_project.html
@@ -20,7 +20,7 @@
                       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                         <div class="col-xs-12 text-center">
                             <div class="center-block img-overlay-container">
-                                 {{ helper.render_project_thumbnail(project, upload_method, style="max-height:200px;", class="img-thumbnail", id="project.id") }}
+                                 {{ helper.render_project_thumbnail(project, upload_method, class="img-thumbnail", id="project.id") }}
                                 <div class="img-overlay edit-profile-image">
                                         <i class="fa fa-pencil-square-o fa-3x"></i>
                                         <span>Edit</span>
