--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -38,7 +38,7 @@
  {% if categories_projects['featured'] %}
 <section class="white pattern-white-wall box-shadow-white-bottom">
   <div class="container padding-top-sm">
-    <div class="text-center col-xs-12">
+    <div class="text-center col-xs-12 padding-bottom-xs">
       <h2>{{ _('Featured Crowdsourcing Projects') }}</h2>
     </div>
     <div class="polaroids">
